welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: type mismatch;
 found   : java.awt.Color
 required: Int
		bouge = T(T.length-1)
                         ^Array2:34: error: type mismatch;
 found   : Int
 required: java.awt.Color
		T(0) = bouge
                       ^Array2:39: error: type mismatch;
 found   : java.awt.Color
 required: Int
		bouge = T(0)
                         ^Array2:44: error: type mismatch;
 found   : Int
 required: java.awt.Color
		T(T.length-1) = bouge
                                ^