welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() 
{
	var T = new Array[Color](getMondeHauteur())
	var bouge = 0
	var decalage = 0
	
	def brosse(c:Color)
	{
		setCouleurBrosse(c); baisseBrosse(); leveBrosse()
	}

	def colonne()
	{
		brosse(T(0))
		for(i <- 1 to T.length-1)
		{	
			avance()
			brosse(T(i))
		}
		for(i <- 1 to T.length-1)
		{
			recule()
		}
	}

	def rotatTableauDroite()
	{
		bouge = T(T.length-1)
		for(i <- T.length-1 to 1)
		{
			T(i) = T(i-1)
		}
		T(0) = bouge
	}

	def rotatTableauGauche()
	{
		bouge = T(0)
		for(i <- 0 to T.length-2)
		{
			T(i) = T(i+1)
		}
		T(T.length-1) = bouge
	}

	T(0) = getCouleurSol();
	for(i <- 1 to T.length-1)
	{
		avance;
		T(i) = getCouleurSol();		
	}
	for(i <- 1 to T.length-1)
	{
		recule()
	}

	for(i <- 1 to T.length-1)
	{
		avance(); gauche(); avance(); droite()
		if(decalage == litMessage().toInt +1)
			rotatTableauGauche();
		else if(decalage == litMessage().toInt -1)
			rotatTableauDroite(); 
		colonne()
	}
}

